--- a/KurumsalWeb/Views/Admin/Index.cshtml
+++ b/KurumsalWeb/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<KurumsalWeb.Models.Kategori>
+﻿@model IEnumerable<KurumsalWeb.Models.Model.Kategori>
 @{
     ViewBag.Title = "Admin Anasayfa";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -11,11 +11,10 @@
         <div class="row">
             <div class="col-lg-12">
                 <h3 class="page-header"><i class="fa fa-laptop"></i> Dashboard</h3>
-                @foreach (var item in Model)
-                {
-                    <li>@item.KategoriAdi</li>
-
-                }
+               @foreach (var item in Model)
+               {
+                   <li>@item.KategoriAd</li>
+               }
 
                 <ol class="breadcrumb">
                     <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
