--- a/KurumsalWeb/Views/Shared/_AdminLayout.cshtml
+++ b/KurumsalWeb/Views/Shared/_AdminLayout.cshtml
@@ -325,6 +325,14 @@
                         </a>
                     </li>
                     <li>
+                        <a class="" href="/Kimlik/Index/">
+                            <i class="icon_piechart"></i>
+                            <span>Site Kimlik</span>
+
+                        </a>
+
+                    </li>
+                    <li>
                         <a class="" href="/Hakkimizda/Index/">
                             <i class="icon_piechart"></i>
                             <span>Hakkımızda</span>
@@ -333,13 +341,22 @@
 
                     </li>
                     <li>
-                        <a class="" href="/Kimlik/Index/">
+                        <a class="" href="/Iletisim/Index/">
                             <i class="icon_piechart"></i>
-                            <span>Site Kimlik</span>
+                            <span>İletişim</span>
 
                         </a>
 
                     </li>
+                    <li>
+                        <a class="" href="/Hizmet/Index/">
+                            <i class="icon_piechart"></i>
+                            <span>Hizmetler</span>
+
+                        </a>
+
+                    </li>
+
                     <li class="sub-menu">
                         <a href="javascript:;" class="">
                             <i class="icon_document_alt"></i>
