--- a/KurumsalWeb/Views/Hizmet/Edit.cshtml
+++ b/KurumsalWeb/Views/Hizmet/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Hizmet Düzenle</h2>
 
 <div class="form">
-    <form class="form-validate form-horizontal" id="feedback_form" method="post" action="/Hizmet/Edit/" enctype="multipart/form-data">
+    <form class="form-validate form-horizontal" id="feedback_form" method="post" action="/Hizmet/Edit/@Model.HizmetId" enctype="multipart/form-data">
         <div class="form-group ">
             <label for="cname" class="control-label col-lg-2">Başlık <span class="required">*</span></label>
             <div class="col-lg-10">
