--- a/KurumsalWeb/Views/Kategori/Details.cshtml
+++ b/KurumsalWeb/Views/Kategori/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Kategori Detay</h2>
 
 <div>
     <h4>Kategori</h4>
@@ -31,5 +31,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.KategoriId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Geri Dön", "Index")
 </p>
