--- a/KurumsalWeb/Views/Kategori/Details.cshtml
+++ b/KurumsalWeb/Views/Kategori/Details.cshtml
@@ -30,6 +30,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.KategoriId }) |
+    @Html.ActionLink("Güncelle", "Edit", new { id = Model.KategoriId }) |
     @Html.ActionLink("Geri Dön", "Index")
 </p>
