--- a/KurumsalWeb/Views/Kategori/Create.cshtml
+++ b/KurumsalWeb/Views/Kategori/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Yeni Kategori</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -40,5 +40,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Geri Dön", "Index")
 </div>
