--- a/KurumsalWeb/Views/Kategori/Delete.cshtml
+++ b/KurumsalWeb/Views/Kategori/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Kategori Sil</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Kategoriyi Silmek İstediğinize Emin misiniz?</h3>
 <div>
     <h4>Kategori</h4>
     <hr />
@@ -34,8 +34,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Sil" class="btn btn-default" /> |
+            @Html.ActionLink("Geri Dön", "Index")
         </div>
     }
 </div>
