--- a/KurumsalWeb/Views/Kategori/Edit.cshtml
+++ b/KurumsalWeb/Views/Kategori/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Kategori düzenle</h2>
 
 @using (Html.BeginForm())
 {
@@ -42,5 +42,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Geri Dön", "Index")
 </div>
